--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -85,7 +85,7 @@ items:
       - name: Loggdata
         href: platform/data-security.md
       - name: Hantering av personliga loggdata
-        href: ../log-analytics/log-analytics-personal-data-mgmt.md?toc=/azure/azure-monitor/toc.json
+        href: platform/personal-data-mgmt.md
       - name: Insamling, kvarhållning och lagring av programdata
         href: ../application-insights/app-insights-data-retention-privacy.md?toc=/azure/azure-monitor/toc.json
   - name: Insikter
@@ -115,9 +115,9 @@ items:
     - name: Övergång till OMS-portalen
       items:
       - name: Översikt
-        href: ../log-analytics/log-analytics-oms-portal-transition.md?toc=/azure/azure-monitor/toc.json
+        href: platform/oms-portal-transition.md
       - name: Vanliga frågor
-        href: ../log-analytics/log-analytics-oms-portal-faq.md?toc=/azure/azure-monitor/toc.json
+        href: platform/oms-portal-faq.md
   - name: Svara på incidenter
     items:
     - name: Aviseringar
@@ -153,7 +153,7 @@ items:
       - name: Rollbehörigheter och säkerhet
         href: ../monitoring-and-diagnostics/monitoring-roles-permissions-security.md?toc=/azure/azure-monitor/toc.json
       - name: Arbetsytor
-        href: ../log-analytics/log-analytics-manage-access.md?toc=/azure/azure-monitor/toc.json
+        href: platform/manage-access.md
       - name: Program
         href: ../application-insights/app-insights-resources-roles-access-control.md?toc=/azure/azure-monitor/toc.json
       - name: IP-adresser
@@ -166,8 +166,6 @@ items:
         href: ../application-insights/app-insights-web-monitor-performance.md?toc=/azure/azure-monitor/toc.json
       - name: Avgränsa utveckling, testning och produktion
         href: ../application-insights/app-insights-separate-resources.md?toc=/azure/azure-monitor/toc.json
-      - name: Övervaka appar med flera komponenter
-        href: ../application-insights/app-insights-monitor-multi-role-apps.md?toc=/azure/azure-monitor/toc.json
       - name: Hur kan jag ... i Application Insights?
         href: ../application-insights/app-insights-how-do-i.md?toc=/azure/azure-monitor/toc.json
     - name: Hantera arbetsytor
@@ -181,7 +179,7 @@ items:
         - name: Använda Azure PowerShell
           href: learn/quick-create-workspace-posh.md
       - name: Ta bort en arbetsyta
-        href: ../log-analytics/log-analytics-manage-del-workspace.md?toc=/azure/azure-monitor/toc.json
+        href: platform/delete-workspace.md
       - name: Design för tjänstleverantörer
         href: platform/service-providers.md
   - name: Samla in data
@@ -562,7 +560,7 @@ items:
         - name: Prissättning
           href: insights/network-performance-monitor-pricing-faq.md
         - name: VANLIGA FRÅGOR OCH SVAR
-          href: ../log-analytics/log-analytics-network-performance-monitor-faq.md?toc=/azure/azure-monitor/toc.json
+          href: insights/network-performance-monitor-faq.md
     - name: Övervakning av virtuella datorer
       items:
       - name: Azure Monitor för virtuella datorer
@@ -647,7 +645,7 @@ items:
     - name: Power BI
       items:
       - name: Exportera loggdata
-        href: ../log-analytics/log-analytics-powerbi.md?toc=/azure/azure-monitor/toc.json
+        href: platform/powerbi.md
       - name: Exportera programdata
         href: ../application-insights/app-insights-export-power-bi.md?toc=/azure/azure-monitor/toc.json
     - name: Skicka data till Grafana
@@ -838,7 +836,7 @@ items:
     - name: Information om Enterprise-prenumerationsavtal för program
       href: ../application-insights/app-insights-pricing-enterprise-details.md?toc=/azure/azure-monitor/toc.json
     - name: Volym och kvarhållning för loggdata
-      href: ../log-analytics/log-analytics-manage-cost-storage.md?toc=/azure/azure-monitor/toc.json
+      href: platform/manage-cost-storage.md
     - name: Övervaka användning av loggdata
       href: ../log-analytics/log-analytics-usage.md?toc=/azure/azure-monitor/toc.json
   - name: Automatisera
@@ -1010,9 +1008,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: ee2702e834ce782f5b690cbfc78d300efa1ee602
-ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
+ms.openlocfilehash: dc89f1634040b7002e58206aaf6d1ade6965b2a8
+ms.sourcegitcommit: 698ba3e88adc357b8bd6178a7b2b1121cb8da797
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52968177"
+ms.lasthandoff: 12/07/2018
+ms.locfileid: "53017910"
