--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -14,20 +14,8 @@ items:
   items:
   - name: Skapa ett konto
     href: cognitive-services-apis-create-account.md
-- name: Självstudier
-  items:
-  - name: Utveckla en app med visuellt innehåll
-    href: ./Computer-vision/tutorials/csharptutorial.md
-  - name: Identifiera avsikter med Speech SDK och LUIS
-    href: ./speech-service/how-to-recognize-intents-from-speech-csharp.md
-  - name: Skapa en LUIS-app
-    href: ./luis/luis-quickstart-intents-only.md
-  - name: Använd textanalys med Power BI
-    href: ./Text-Analytics/tutorials/tutorial-power-bi-key-phrases.md
-  - name: Skapa en app för webbsökning i Bing
-    href: ./bing-web-search/tutorial-bing-web-search-single-page-app.md
-  - name: Skapa en app för bildsökning i Bing
-    href: ./bing-image-search/tutorial-bing-image-search-single-page-app.md
+  - name: Autentisering
+    href: authentication.md
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -44,9 +32,9 @@ items:
     href: http://go.microsoft.com/fwlink/?LinkId=698895
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase
-ms.openlocfilehash: 43358d176db8642862a49d755a766cc22dbd57b9
-ms.sourcegitcommit: 0b7fc82f23f0aa105afb1c5fadb74aecf9a7015b
+ms.openlocfilehash: 28b17af092a1e336cb830772541dcdefe472ed3a
+ms.sourcegitcommit: e37fa6e4eb6dbf8d60178c877d135a63ac449076
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/14/2018
-ms.locfileid: "51630987"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53320871"
