--- a/articles/hdinsight/storm/TOC.yml
+++ b/articles/hdinsight/storm/TOC.yml
@@ -5,7 +5,7 @@ items:
   items:
   - name: Översikt
     href: apache-storm-overview.md
-  - name: Versionshantering för komponenter
+  - name: Apache Hadoop-komponenter på HDInsight
     href: ../hdinsight-component-versioning.md
     maintainContext: true
   - name: HDInsight 4.0
@@ -187,7 +187,7 @@ items:
     - name: Migrera till Resource Managers utvecklingsverktyg
       href: ../hdinsight-hadoop-development-using-azure-resource-manager.md
       maintainContext: true
-    - name: 'Tillgänglighet och tillförlitlighet '
+    - name: Tillgänglighet och tillförlitlighet
       href: ../hdinsight-high-availability-linux.md
       maintainContext: true
     - name: Uppgradera HDInsight-kluster till nyare version
@@ -316,9 +316,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 2d3a2999c69833f759cbaab0241136609e068bf2
-ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
+ms.openlocfilehash: 8003378277a74a4ca1f35c54794e4c4045113d8a
+ms.sourcegitcommit: e37fa6e4eb6dbf8d60178c877d135a63ac449076
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/28/2018
-ms.locfileid: "52496230"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53321843"
