--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 6297e92b9e20d42a914795e8ebcb77bb19d1eb4b
-ms.sourcegitcommit: 26cc9a1feb03a00d92da6f022d34940192ef2c42
+ms.openlocfilehash: b995f5f29c1377105e174faed43fb8ba82d90383
+ms.sourcegitcommit: eb9dd01614b8e95ebc06139c72fa563b25dc6d13
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/06/2018
-ms.locfileid: "48829893"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53313249"
 documentType: LandingData
 title: Dokumentation om Azure Search
 metadata:
   document_id: 
   title: Dokumentation om Azure Search – självstudier, snabbstarter, API-referenser
-  meta.description: Learn how to create an enterprise search solution over private, heterogenous content using Azure Search. Tutorials, API references, and other docs show you how to consolidate searchable content into a single fast index, queryable using simple-to-advanced syntax for a broad range of scenarios.
+  description: Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier.
   services: search
   author: HeidiSteen
   manager: cgronlun
@@ -71,6 +71,6 @@ sections:
     className: cardsD
     items:
     - title: Språk
-      html: <p><a href="/dotnet/api/?term=microsoft.azure.search">.NET</a></p><p><a href="/dotnet/api/?term=microsoft.azure.management.search">.NET (hantering)</a></p><p><a href="https://docs.microsoft.com/python/api/?view=azure-python&term=search">Python (hantering)</a></p>
+      html: <p><a href="/dotnet/api/?term=microsoft.azure.search">NET</a></p><p><a href="/dotnet/api/?term=microsoft.azure.management.search">.NET (hantering)</a></p><p><a href="https://docs.microsoft.com/python/api/?view=azure-python&term=search">Python (hantering)</a></p>
     - title: REST
       html: <p><a href="/rest/api/searchservice">Referens för API för tjänst</a></p><p><a href="/rest/api/searchmanagement">Referens för API för hantering</a></p>
