--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -157,14 +157,8 @@ items:
       href: sql-database-managed-instance-create-manage.md
     - name: Resursbegränsningar
       href: sql-database-managed-instance-resource-limits.md
-    - name: Konfiguration av virtuellt nätverk
-      items:
-      - name: Konfiguration av virtuellt nätverk
-        href: sql-database-managed-instance-vnet-configuration.md
-      - name: Anslutningsarkitektur
-        href: sql-database-managed-instance-connectivity-architecture.md
-      - name: Hanteringsslutpunkt
-        href: sql-database-managed-instance-management-endpoint.md
+    - name: Anslutningsarkitektur
+      href: sql-database-managed-instance-connectivity-architecture.md
     - name: T-SQL-skillnader
       href: sql-database-managed-instance-transact-sql-information.md
   - name: Plattform som en tjänst
@@ -287,34 +281,28 @@ items:
       href: elastic-jobs-overview.md
   - name: Jämförelse av SQL-funktioner
     href: sql-database-features.md
-  - name: Övervakning och prestandajustering
+  - name: Övervakning och justering
     items:
-    - name: Översikt över övervakning och justering
+    - name: Övervakning och prestandajustering
       href: sql-database-monitor-tune-overview.md
-    - name: Intelligent prestanda
+    - name: Prestandaövervakning
       items:
-      - name: Justeringsåtgärder och rekommendationer
-        href: sql-database-performance.md
       - name: Query Performance Insight
         href: sql-database-query-performance.md
-      - name: Prestandarekommendationer för Database Advisor
-        href: sql-database-advisor.md
-    - name: Avancerad övervakning
-      items:
       - name: Övervakning av Azure SQL-analys
         href: https://docs.microsoft.com/azure/log-analytics/log-analytics-azure-sql
       - name: Loggning av diagnostiktelemetri
         href: sql-database-metrics-diag-logging.md
-    - name: Intelligenta insikter om prestanda
-      href: sql-database-intelligent-insights.md
-    - name: Automatisk inställning
-      href: sql-database-automatic-tuning.md
-    - name: Intelligent frågebearbetning
+    - name: Intelligent prestanda
       items:
-      - name: Intelligent frågebearbetning
-        href: https://docs.microsoft.com/sql/relational-databases/performance/intelligent-query-processing?toc=/azure/sql-database/toc.json
-      - name: Anpassningsbar frågebearbetning
-        href: https://docs.microsoft.com/sql/relational-databases/performance/adaptive-query-processing?toc=/azure/sql-database/toc.json
+      - name: Automatisk inställning
+        href: sql-database-automatic-tuning.md
+      - name: Intelligenta insikter om prestanda
+        href: sql-database-intelligent-insights.md
+      - name: Justeringsåtgärder och rekommendationer
+        href: sql-database-performance.md
+      - name: Prestandarekommendationer för Database Advisor
+        href: sql-database-advisor.md
   - name: Databasfunktioner
     items:
     - name: Databasfunktioner
@@ -409,10 +397,20 @@ items:
       href: sql-database-managed-instance-migrate.md
     - name: Migrera transparent datakrypteringscertifikat till hanterad instans
       href: sql-database-managed-instance-migrate-tde-certificate.md
+    - name: Avgöra storleken på undernätet för en hanterad instans
+      href: sql-database-managed-instance-determine-size-vnet-subnet.md
+    - name: Skapa ett nytt virtuellt nätverk och undernät för en hanterad instans
+      href: sql-database-managed-instance-create-vnet-subnet.md
+    - name: Konfigurera ett befintligt virtuellt nätverk och undernät för en hanterad instans
+      href: sql-database-managed-instance-configure-vnet-subnet.md
     - name: Konfigurera anpassad DNS
       href: sql-database-managed-instance-custom-dns.md
     - name: Synkronisera nätverkskonfiguration
       href: sql-database-managed-instance-sync-network-configuration.md
+    - name: Hitta IP-adress för hanteringsslutpunkt
+      href: sql-database-managed-instance-find-management-endpoint-ip-address.md
+    - name: Verifiera inbyggt brandväggsskydd
+      href: sql-database-managed-instance-management-endpoint-verify-built-in-firewall.md
     - name: Transaktionsreplikering
       href: replication-with-sql-database-managed-instance.md
     - name: Konfigurera hotidentifiering
@@ -668,9 +666,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: bb051db62acda98e40be09c174216208578afccc
-ms.sourcegitcommit: e37fa6e4eb6dbf8d60178c877d135a63ac449076
+ms.openlocfilehash: d94f4fb39ccdee60fae434204369fd844aedeb20
+ms.sourcegitcommit: 85d94b423518ee7ec7f071f4f256f84c64039a9d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53320973"
+ms.lasthandoff: 12/14/2018
+ms.locfileid: "53384283"
